--- a/ideal.html
+++ b/ideal.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>New Project</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/alex.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -12,7 +12,7 @@
 <body>
 
 
-
+    <h1 id="template-header">IDEAL TEMPLATE</h1>
 
 
 
