Added reset to the browser. Added some html and css to the partial page.

--- a/partial.html
+++ b/partial.html
@@ -1,20 +1,108 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>New Project</title>
 	<link rel="stylesheet" type="text/css" href="css/georgi.css">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+
 </head>
-<body>
 
-
-
-
-
-
+<body id="leftFood-page">
+	<header class="leftFood-header">
+		<h1>What do you have in your fridge?</h1>
+	</header>
+	<main>
+		<section class="leftFood-section">
+			<h2 class="leftFood-section__heading">Meats</h2>
+			<ul class="leftFood-section__list">
+				<li>
+					<input type="checkbox" value="Beef"> Beef
+				</li>
+				<li>
+					<input type="checkbox" value="Chicken"> Chicken
+				</li>
+				<li>
+					<input type="checkbox" value="Fish"> Fish
+				</li>
+				<li>
+					<input type="checkbox" value="Pork"> Pork
+				</li>
+			</ul>
+		</section>
+		<section class="leftFood-section">
+			<h2 class="leftFood-section__heading">Vegetables</h2>
+			<ul class="leftFood-section__list">
+				<li>
+					<input type="checkbox" value="Cucumber"> Cucumber
+				</li>
+				<li>
+					<input type="checkbox" value="Tomatoes"> Tomatoes
+				</li>
+				<li>
+					<input type="checkbox" value="Carrots"> Carrots
+				</li>
+				<li>
+					<input type="checkbox" value="Garlic"> Garlic
+				</li>
+				<li>
+					<input type="checkbox" value="Mushrooms"> Mushrooms
+				</li>
+				<li>
+					<input type="checkbox" value="Cabbage"> Cabbage
+				</li>
+				<li>
+					<input type="checkbox" value="Broccoli"> Broccoli
+				</li>
+				<li>
+					<input type="checkbox" value="Onion"> Onion
+				</li>
+			</ul>
+		</section>
+		<section class="leftFood-section">
+			<h2 class="leftFood-section__heading">Fruits</h2>
+			<ul class="leftFood-section__list">
+				<li>
+					<input type="checkbox" value="Apples"> Apples
+				</li>
+				<li>
+					<input type="checkbox" value="Oranges"> Oranges
+				</li>
+				<li>
+					<input type="checkbox" value="Bananas"> Bananas
+				</li>
+				<li>
+					<input type="checkbox" value="Apricots"> Apricots
+				</li>
+				<li>
+					<input type="checkbox" value="Cherries"> Cherries
+				</li>
+				<li>
+					<input type="checkbox" value="Grapes"> Grapes
+				</li>
+				<li>
+					<input type="checkbox" value="Strawberries"> Strawberries
+				</li>
+				<li>
+					<input type="checkbox" value="Lemons"> Lemons
+				</li>
+				<li>
+					<input type="checkbox" value="Watermelon"> Watermelon
+				</li>
+				<li>
+					<input type="checkbox" value="Pears"> Pears
+				</li>
+				<li>
+					<input type="checkbox" value="Peaches"> Peaches
+				</li>
+			</ul>
+		</section>
+		<a href="#" class="btn">Cook!</a>
+	</main>
+	<script src=""></script>
 </body>
+
 </html>
