--- a/ideal.html
+++ b/ideal.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>New Project</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/alex.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
