--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
+
 <head>
-	<meta charset="utf-8">
-	<title>New Project</title>
-	<link rel="stylesheet" type="text/css" href="css/martina.css">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    
+    <meta charset="UTF-8">
+    <title>LeftOvers app</title>
+    <meta name="description" content="The best app for finding what kinds of dishes you can make from all the leftovers you have in your fridge">
+    <meta name="author" content="Martina M. D. Tay">
+
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONT -->
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <!--------- my very own stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
 
+    <h1>Welcome to LeftOvers app</h1>
+    <img src="img/fridge.jpg" class="fridge">
+    <div class="ball" id="ball">
+        <button>I'm Hungry!</button>
+    </div>
 
 
 
 
+    <!-- End of Document  -------------------------->
+    <!--Her er jQuery :)-->
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 
+    <!--    Her er min egen JS :)-->
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
+
 </html>
+
+<!--
+------------------------------- Kildeliste
+Simple onload animation:
+https://codepen.io/N1kbes/pen/yYYbRO
+-->
