--- a/partial.html
+++ b/partial.html
@@ -13,23 +13,23 @@
 
 <body id="leftFood-page">
 	<header class="leftFood-header">
-		<h1>What do you have in your fridge?</h1>
+		<h1 class="leftFood__mainHeading">What are we going to cook with?</h1>
 	</header>
 	<main>
 		<section class="leftFood-section">
 			<h2 class="leftFood-section__heading">Meats</h2>
 			<ul class="leftFood-section__list">
 				<li>
-					<input type="checkbox" value="Beef"> Beef
+						<input type="checkbox" id="beef" value="Beef"><label for="beef">Beef</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Chicken"> Chicken
+					<input type="checkbox" id="chicken" value="Chicken"><label for="chicken">Chicken</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Fish"> Fish
+					<input type="checkbox" id="fish" value="Fish"><label for="fish">Fish</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Pork"> Pork
+					<input type="checkbox" id="pork" value="Pork"><label for="pork">Pork</label>
 				</li>
 			</ul>
 		</section>
@@ -37,28 +37,28 @@
 			<h2 class="leftFood-section__heading">Vegetables</h2>
 			<ul class="leftFood-section__list">
 				<li>
-					<input type="checkbox" value="Cucumber"> Cucumber
+					<input type="checkbox" id="cucumber" value="Cucumber"><label for="cucumber">Cucumber</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Tomatoes"> Tomatoes
+					<input type="checkbox" id="tomatoes" value="Tomatoes"><label for="tomatoes">Tomatoes</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Carrots"> Carrots
+					<input type="checkbox" id="carrots" value="Carrots"><label for="carrots">Carrots</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Garlic"> Garlic
+					<input type="checkbox" id="garlic" value="Garlic"><label for="garlic">Garlic</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Mushrooms"> Mushrooms
+					<input type="checkbox" id="mushrooms" value="Mushrooms"><label for="mushrooms">Mushrooms</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Cabbage"> Cabbage
+					<input type="checkbox" id="cabbage" value="Cabbage"><label for="cabbage">Cabbage</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Broccoli"> Broccoli
+					<input type="checkbox" id="broccoli" value="Broccoli"><label for="broccoli">Broccoli</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Onion"> Onion
+					<input type="checkbox" id="onion" value="Onion"><label for="onion">Onion</label>
 				</li>
 			</ul>
 		</section>
@@ -66,37 +66,37 @@
 			<h2 class="leftFood-section__heading">Fruits</h2>
 			<ul class="leftFood-section__list">
 				<li>
-					<input type="checkbox" value="Apples"> Apples
+					<input type="checkbox" id="apples" value="Apples"><label for="apples">Apples</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Oranges"> Oranges
+					<input type="checkbox" id="oranges" value="Oranges"><label for="oranges">Oranges</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Bananas"> Bananas
+					<input type="checkbox" id="bananas" value="Bananas"><label for="bananas">Bananas</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Apricots"> Apricots
+					<input type="checkbox" id="apricots" value="Apricots"><label for="apricots">Apricots</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Cherries"> Cherries
+					<input type="checkbox" id="cherries" value="Cherries"><label for="cherries">Cherries</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Grapes"> Grapes
+					<input type="checkbox" id="grapes" value="Grapes"><label for="grapes">Grapes</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Strawberries"> Strawberries
+					<input type="checkbox" id="strawberries" value="Strawberries"><label for="strawberries">Strawberries</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Lemons"> Lemons
+					<input type="checkbox" id="lemons" value="Lemons"><label for="lemons">Lemons</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Watermelon"> Watermelon
+					<input type="checkbox" id="watermelon" value="Watermelon"><label for="watermelon">Watermelon</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Pears"> Pears
+					<input type="checkbox" id="pears" value="Pears"><label for="pears">Pears</label>
 				</li>
 				<li>
-					<input type="checkbox" value="Peaches"> Peaches
+					<input type="checkbox" id="peaches" value="Peaches"><label for="peaches">Peaches</label>
 				</li>
 			</ul>
 		</section>
