--- a/partial.html
+++ b/partial.html
@@ -13,90 +13,90 @@
 
 <body id="leftFood-page">
 	<header class="leftFood-header">
-		<h1 class="leftFood__mainHeading">What are we going to cook with?</h1>
+		<h1 class="leftFood__mainHeadline">What are we going to cook with?</h1>
 	</header>
-	<main>
+	<main class="leftFood-main">
 		<section class="leftFood-section">
 			<h2 class="leftFood-section__heading">Meats</h2>
 			<ul class="leftFood-section__list">
-				<li>
-						<input type="checkbox" id="beef" value="Beef"><label for="beef">Beef</label>
+				<li class="checkbox-container">
+						<input class="checkbox" type="checkbox" id="beef" value="Beef"><label for="beef">Beef</label>
 				</li>
-				<li>
-					<input type="checkbox" id="chicken" value="Chicken"><label for="chicken">Chicken</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="chicken" value="Chicken"><label for="chicken">Chicken</label>
 				</li>
-				<li>
-					<input type="checkbox" id="fish" value="Fish"><label for="fish">Fish</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="fish" value="Fish"><label for="fish">Fish</label>
 				</li>
-				<li>
-					<input type="checkbox" id="pork" value="Pork"><label for="pork">Pork</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="pork" value="Pork"><label for="pork">Pork</label>
 				</li>
 			</ul>
 		</section>
 		<section class="leftFood-section">
 			<h2 class="leftFood-section__heading">Vegetables</h2>
 			<ul class="leftFood-section__list">
-				<li>
-					<input type="checkbox" id="cucumber" value="Cucumber"><label for="cucumber">Cucumber</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="cucumber" value="Cucumber"><label for="cucumber">Cucumber</label>
 				</li>
-				<li>
-					<input type="checkbox" id="tomatoes" value="Tomatoes"><label for="tomatoes">Tomatoes</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="tomatoes" value="Tomatoes"><label for="tomatoes">Tomatoes</label>
 				</li>
-				<li>
-					<input type="checkbox" id="carrots" value="Carrots"><label for="carrots">Carrots</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="carrots" value="Carrots"><label for="carrots">Carrots</label>
 				</li>
-				<li>
-					<input type="checkbox" id="garlic" value="Garlic"><label for="garlic">Garlic</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="garlic" value="Garlic"><label for="garlic">Garlic</label>
 				</li>
-				<li>
-					<input type="checkbox" id="mushrooms" value="Mushrooms"><label for="mushrooms">Mushrooms</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="mushrooms" value="Mushrooms"><label for="mushrooms">Mushrooms</label>
 				</li>
-				<li>
-					<input type="checkbox" id="cabbage" value="Cabbage"><label for="cabbage">Cabbage</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="cabbage" value="Cabbage"><label for="cabbage">Cabbage</label>
 				</li>
-				<li>
-					<input type="checkbox" id="broccoli" value="Broccoli"><label for="broccoli">Broccoli</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="broccoli" value="Broccoli"><label for="broccoli">Broccoli</label>
 				</li>
-				<li>
-					<input type="checkbox" id="onion" value="Onion"><label for="onion">Onion</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="onion" value="Onion"><label for="onion">Onion</label>
 				</li>
 			</ul>
 		</section>
 		<section class="leftFood-section">
 			<h2 class="leftFood-section__heading">Fruits</h2>
 			<ul class="leftFood-section__list">
-				<li>
-					<input type="checkbox" id="apples" value="Apples"><label for="apples">Apples</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="apples" value="Apples"><label for="apples">Apples</label>
 				</li>
-				<li>
-					<input type="checkbox" id="oranges" value="Oranges"><label for="oranges">Oranges</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="oranges" value="Oranges"><label for="oranges">Oranges</label>
 				</li>
-				<li>
-					<input type="checkbox" id="bananas" value="Bananas"><label for="bananas">Bananas</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="bananas" value="Bananas"><label for="bananas">Bananas</label>
 				</li>
-				<li>
-					<input type="checkbox" id="apricots" value="Apricots"><label for="apricots">Apricots</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="apricots" value="Apricots"><label for="apricots">Apricots</label>
 				</li>
-				<li>
-					<input type="checkbox" id="cherries" value="Cherries"><label for="cherries">Cherries</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="cherries" value="Cherries"><label for="cherries">Cherries</label>
 				</li>
-				<li>
-					<input type="checkbox" id="grapes" value="Grapes"><label for="grapes">Grapes</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="grapes" value="Grapes"><label for="grapes">Grapes</label>
 				</li>
-				<li>
-					<input type="checkbox" id="strawberries" value="Strawberries"><label for="strawberries">Strawberries</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="strawberries" value="Strawberries"><label for="strawberries">Strawberries</label>
 				</li>
-				<li>
-					<input type="checkbox" id="lemons" value="Lemons"><label for="lemons">Lemons</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="lemons" value="Lemons"><label for="lemons">Lemons</label>
 				</li>
-				<li>
-					<input type="checkbox" id="watermelon" value="Watermelon"><label for="watermelon">Watermelon</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="watermelon" value="Watermelon"><label for="watermelon">Watermelon</label>
 				</li>
-				<li>
-					<input type="checkbox" id="pears" value="Pears"><label for="pears">Pears</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="pears" value="Pears"><label for="pears">Pears</label>
 				</li>
-				<li>
-					<input type="checkbox" id="peaches" value="Peaches"><label for="peaches">Peaches</label>
+				<li class="checkbox-container">
+					<input class="checkbox" type="checkbox" id="peaches" value="Peaches"><label for="peaches">Peaches</label>
 				</li>
 			</ul>
 		</section>
