Fixed linking between css and html.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <!-- FONT -->
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="build/normalize.css">
+    <link rel="stylesheet" href="build/skeleton.css">
     <!--------- my very own stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="build/style.css">
 
 </head>
 
