--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>New Project</title>
-	<link rel="stylesheet" type="text/css" href="css/duus.css">
+	<link rel="stylesheet" type="text/css" href="build/duus.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
