SCSS set.  Some SCSS implemented on my files. (partial and georgi)

--- a/partial.html
+++ b/partial.html
@@ -11,14 +11,14 @@
 
 </head>
 
-<body id="leftFood-page">
-	<header class="leftFood-header">
-		<h1 class="leftFood__mainHeadline">What are we going to cook with?</h1>
+<body class="ingredients">
+	<header class="ingredients-header">
+		<h1 class="ingredients__headline">What are we going to cook with?</h1>
 	</header>
-	<main class="leftFood-main">
-		<section class="leftFood-section">
-			<h2 class="leftFood-section__heading">Meats</h2>
-			<ul class="leftFood-section__list">
+	<main class="ingredients-main">
+		<section class="ingredients-section">
+			<h2 class="ingredients-section__heading">Meats</h2>
+			<ul class="ingredients-section__list">
 				<li class="checkbox-container">
 						<input class="checkbox" type="checkbox" id="beef" value="Beef"><label for="beef">Beef</label>
 				</li>
@@ -33,9 +33,9 @@
 				</li>
 			</ul>
 		</section>
-		<section class="leftFood-section">
-			<h2 class="leftFood-section__heading">Vegetables</h2>
-			<ul class="leftFood-section__list">
+		<section class="ingredients-section">
+			<h2 class="ingredients-section__heading">Vegetables</h2>
+			<ul class="ingredients-section__list">
 				<li class="checkbox-container">
 					<input class="checkbox" type="checkbox" id="cucumber" value="Cucumber"><label for="cucumber">Cucumber</label>
 				</li>
@@ -62,9 +62,9 @@
 				</li>
 			</ul>
 		</section>
-		<section class="leftFood-section">
-			<h2 class="leftFood-section__heading">Fruits</h2>
-			<ul class="leftFood-section__list">
+		<section class="ingredients-section">
+			<h2 class="ingredients-section__heading">Fruits</h2>
+			<ul class="ingredients-section__list">
 				<li class="checkbox-container">
 					<input class="checkbox" type="checkbox" id="apples" value="Apples"><label for="apples">Apples</label>
 				</li>
