Grid added partially. CSS changed to SCSS.

--- a/partial.html
+++ b/partial.html
@@ -12,95 +12,95 @@
 </head>
 
 <body class="ingredients">
-	<header class="ingredients-header">
-		<h1 class="ingredients__headline">What are we going to cook with?</h1>
+	<header class="ingredients__header">
+		<h1 class="ingredients-header__headline">What are we going to cook with?</h1>
 	</header>
-	<main class="ingredients-main">
-		<section class="ingredients-section">
-			<h2 class="ingredients-section__heading">Meats</h2>
-			<ul class="ingredients-section__list">
-				<li class="checkbox-container">
+	<main class="ingredients__main">
+		<section class="ingredients__list ingredients__list--meats">
+			<h2 class="ingredients-list__headline">Meats</h2>
+			<ul class="ingredients-list__content">
+				<li class="list__checkbox">
 						<input class="checkbox" type="checkbox" id="beef" value="Beef"><label for="beef">Beef</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="chicken" value="Chicken"><label for="chicken">Chicken</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="fish" value="Fish"><label for="fish">Fish</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="pork" value="Pork"><label for="pork">Pork</label>
 				</li>
 			</ul>
 		</section>
-		<section class="ingredients-section">
-			<h2 class="ingredients-section__heading">Vegetables</h2>
-			<ul class="ingredients-section__list">
-				<li class="checkbox-container">
+		<section class="ingredients__list ingredients__list--vegetables">
+			<h2 class="ingredients-list__headline">Vegetables</h2>
+			<ul class="ingredients-list__content">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="cucumber" value="Cucumber"><label for="cucumber">Cucumber</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="tomatoes" value="Tomatoes"><label for="tomatoes">Tomatoes</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="carrots" value="Carrots"><label for="carrots">Carrots</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="garlic" value="Garlic"><label for="garlic">Garlic</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="mushrooms" value="Mushrooms"><label for="mushrooms">Mushrooms</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="cabbage" value="Cabbage"><label for="cabbage">Cabbage</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="broccoli" value="Broccoli"><label for="broccoli">Broccoli</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="onion" value="Onion"><label for="onion">Onion</label>
 				</li>
 			</ul>
 		</section>
-		<section class="ingredients-section">
-			<h2 class="ingredients-section__heading">Fruits</h2>
-			<ul class="ingredients-section__list">
-				<li class="checkbox-container">
+		<section class="ingredients__list ingredients__list--fruits">
+			<h2 class="ingredients-list__headline">Fruits</h2>
+			<ul class="ingredients-list__content">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="apples" value="Apples"><label for="apples">Apples</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="oranges" value="Oranges"><label for="oranges">Oranges</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="bananas" value="Bananas"><label for="bananas">Bananas</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="apricots" value="Apricots"><label for="apricots">Apricots</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="cherries" value="Cherries"><label for="cherries">Cherries</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="grapes" value="Grapes"><label for="grapes">Grapes</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="strawberries" value="Strawberries"><label for="strawberries">Strawberries</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="lemons" value="Lemons"><label for="lemons">Lemons</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="watermelon" value="Watermelon"><label for="watermelon">Watermelon</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="pears" value="Pears"><label for="pears">Pears</label>
 				</li>
-				<li class="checkbox-container">
+				<li class="list__checkbox">
 					<input class="checkbox" type="checkbox" id="peaches" value="Peaches"><label for="peaches">Peaches</label>
 				</li>
 			</ul>
 		</section>
-		<a href="#" class="btn">Cook!</a>
+		<a href="#" class="ingredients__btn">Cook!</a>
 	</main>
 	<script src=""></script>
 </body>
